<?xml version="1.0" encoding="utf-8"?>
<!-- COMPLETED (3) In res->xml create a file called pref_visualizer -->
<!-- COMPLETED (4) In pref_visualizer create a preference screen containing a single check box preference
    This check box preference should have a default value of true, the key 'show_bass', a
    summaryOff of Hidden, a summaryOn of Shown and a title of 'Show Bass' -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <CheckBoxPreference-->
<!--        android:defaultValue="true"-->
<!--        android:key="@string/pref_show_bass_key"-->
<!--        android:summaryOff="Hidden"-->
<!--        android:summaryOn="Shown"-->
<!--        android:title="Show Bass" />-->
    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_bass_default"
        android:key="@string/pref_show_bass_key"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:title="@string/pref_show_bass_label" />
    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_mid_range_default"
        android:key="@string/pref_show_mid_range_key"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:title="@string/pref_show_mid_range_label" />
    <CheckBoxPreference
        android:defaultValue="@bool/pref_show_treble_default"
        android:key="@string/pref_show_treble_key"
        android:summaryOff="@string/pref_show_false"
        android:summaryOn="@string/pref_show_true"
        android:title="@string/pref_show_treble_label" />
    <ListPreference
        android:defaultValue="@string/pref_color_red_value"
        android:entries="@array/pref_color_option_labels"
        android:entryValues="@array/pref_color_option_values"
        android:key="@string/pref_color_key"
        android:title="@string/pref_color_label" />
    <EditTextPreference
        android:defaultValue="@string/pref_size_default"
        android:key="@string/pref_size_key"
        android:title="@string/pref_size_label" />

</PreferenceScreen>
